<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2.Rules"
    android:background="@drawable/wood_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="110dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="#34FFFFFF">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule1"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule3"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule4"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule5"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule6"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule7"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule8"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule9"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackpot_rule10"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <Button
            android:id="@+id/mainMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main Menu"/>

            <Button
                android:id="@+id/playBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Play"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>